# muxt

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  build.rs
src/: PlayerGUI.slint  TODO.md  main.rs
