[package]
name = "muxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
#tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
#tui-logger = "0.6.4"
rodio = "0.14.0"
cpal = { version = "*", features = ['asio'] }
anyhow = "1.0"