[package]
name = "muxt"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
# for playing audio
rodio = "0.15"

# for keyboard input handling
# winit = "^0.26"

# for the initial (mostly mouse-driven) lightweight cross-platform GUI frontend
slint = "0.2"

# for getting metadata such as artist name, track name, etc.
lofty = "0.6"

# for deriving and setting songs' loudness measurement
# 0.6.2 = "^1"

# for autoplaying the next song smartly (it'll sound good hopefully)
# bliss-audio = "*"

# for shuffing 
fastrand = "*"

#anyhow = "*"

# for better synchronization primitives
parking_lot = "0.12"



[build-dependencies]
slint-build = "0.2.1"



[profile.release]
codegen-units = 1
lto = "true"
